--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="frontend/styles/main.css">
         <!-- GOOGLE FONT-->
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-        <title>Hello, World!</title>
+        <title>Hari Patriadi BIKESTORE!!!</title>
     </head>
     <body>
 
@@ -146,98 +146,98 @@
             Speach Stealth
           </div>
           <div class="products-price">
-            $999,99
+            $399,99
           </div>
         </a>
       </div>
       <div class="col-3">
         <a href="#" class="component-products d-block">
           <div class="pruducts-img mb-4">
-            <img src="frontend/img/bicycle-4 1.png" class="img-fluid">
+            <img src="frontend/img/bicycle-3 1.png" class="img-fluid">
           </div>
           <div class="products-text mb-2">
-            Speach
+            Speach Stealth
           </div>
           <div class="products-price">
-            $800
+            $399,99
           </div>
         </a>
       </div>
       <div class="col-3">
         <a href="#" class="component-products d-block">
           <div class="pruducts-img mb-4">
-            <img src="frontend/img/bicycle-5 1.jpg" class="img-fluid">
+            <img src="frontend/img/bicycle-3 1.png" class="img-fluid">
           </div>
           <div class="products-text mb-2">
-            kalpaa
+            Speach Stealth
           </div>
           <div class="products-price">
-            $728
+            $399,99
           </div>
         </a>
       </div>
       <div class="col-3">
         <a href="#" class="component-products d-block">
           <div class="pruducts-img mb-4">
-            <img src="frontend/img/product-2 1.jpg" class="img-fluid">
+            <img src="frontend/img/bicycle-3 1.png" class="img-fluid">
           </div>
           <div class="products-text mb-2">
-            momoko
+            Speach Stealth
           </div>
           <div class="products-price">
-            $620
+            $399,99
           </div>
         </a>
       </div>
       <div class="col-3">
         <a href="#" class="component-products d-block">
           <div class="pruducts-img mb-4">
-            <img src="frontend/img/product-3 1.jpg" class="img-fluid">
+            <img src="frontend/img/bicycle-3 1.png" class="img-fluid">
           </div>
           <div class="products-text mb-2">
-            xmag 22
+            Speach Stealth
           </div>
           <div class="products-price">
-            $902
+            $399,99
           </div>
         </a>
       </div>
       <div class="col-3">
         <a href="#" class="component-products d-block">
           <div class="pruducts-img mb-4">
-            <img src="frontend/img/product-4 1.jpg" class="img-fluid">
+            <img src="frontend/img/bicycle-3 1.png" class="img-fluid">
           </div>
           <div class="products-text mb-2">
-            Chipas
+            Speach Stealth
           </div>
           <div class="products-price">
-            $9999999
+            $399,99
           </div>
         </a>
       </div>
       <div class="col-3">
         <a href="#" class="component-products d-block">
           <div class="pruducts-img mb-4">
-            <img src="frontend/img/helmet-1 1.png" class="img-fluid">
+            <img src="frontend/img/bicycle-3 1.png" class="img-fluid">
           </div>
           <div class="products-text mb-2">
-            Helm thaipay
+            Speach Stealth
           </div>
           <div class="products-price">
-            $210
+            $399,99
           </div>
         </a>
       </div>
       <div class="col-3">
         <a href="#" class="component-products d-block">
           <div class="pruducts-img mb-4">
-            <img src="frontend/img/bicycle-4 1.png" class="img-fluid">
+            <img src="frontend/img/bicycle-3 1.png" class="img-fluid">
           </div>
           <div class="products-text mb-2">
-            Taros
+            Speach Stealth
           </div>
           <div class="products-price">
-            $999,99
+            $399,99
           </div>
         </a>
       </div>
@@ -264,7 +264,7 @@
           </div>
           <h2 class="testimonial-text">BIKESTORE "GOES TO <br>
           CAMPUS " X UIR ...</h2>
-          <p class="testimonial-nam">Irma Diah Ningsih, Mahasiswa</p>
+          <p class="testimonial-nam">HARI PATRIADI, PROGRAMMER</p>
           <a href="#" class="btn  btn-testimonial">Read Story</a>
       </div>
     </div>
